[tool.poetry]
name = "bananopy"
version = "0.1.0"
description = "A python interface for interacting with Banano "
authors = [
    "milkyklim <10698619+milkyklim@users.noreply.github.com>",
    "Kirby1997 <jj@wilkinsons.me.uk>"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
