[tool.poetry]
name = "bananopy"
version = "0.3.1"
description = "Python library for interaction with Banano"
license = "MIT"
authors = [
    "milkyklim <10698619+milkyklim@users.noreply.github.com>",
    "Kirby1997 <jj@wilkinsons.me.uk>"
]
repository = "https://github.com/milkyklim/bananopy"
readme = "README.rst"
keywords = [
    "python",
    "crypto",
    "banano"
]
documentation = "https://milkyklim.github.io/bananopy"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.1"
black = "^19.10b0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
max-complexity = 18
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.egg-info
  | \.git
  | \.hg
  | \.ipynb_checkpoints
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
